todo-app-helidon/cassandra/kubefiles/zipkin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zipkin
  labels:
    app: zipkin
spec:
  type: ClusterIP
  selector:
    app: zipkin
  ports:
    - port: 9411
      targetPort: 9411
      name: http
