todo-app-helidon/cassandra/kubefiles/zipkin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zipkin-ingress
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /zipkin
            pathType: Prefix
            backend:
              service:
                name: zipkin
                port:
                  number: 9411
